--- a/2.html
+++ b/2.html
@@ -7,7 +7,9 @@
 
 <body>
   <h1><a href="index.html">텅텅상점</a></h1>
-<img src="logo_shape.png" width="100" align="left">
+<video controls autoplay="autoplay" muted="muted" loop width="360">
+<source src="logo_video.mp4" type="video/mp4"> </video>
+
 <h2>텅텅상점</h2>
 
 <a href="https://www.instagram.com/tungtung_market/"
